4.2.4
   - Reduced model load time by 98%
4.2.3
   - Added HierarchyId as a property type
   - Added optional index name for indexed properties
   - Added properties to bidirectional associations allowing custom naming of FK columns in join table
   - New example code for EF6 and EFCore. Thanks to David V for the pull request.
   - Class, property, enum and enum value names are now escaped if they match a reserved C# keyword
   - Ensured that a foreign key property's IsForeignKeyFor value is reset when the association is removed and that property is an Id property. (see https://github.com/msawczyn/EFDesigner2022/issues/47)
   - Replaced legacy EF6Designer.ttinclude and EFCoreDesigner.ttinclude files for legacy model file backward compatability. (see https://github.com/msawczyn/EFDesigner2022/issues/45)
   - Assembly import is a bit smarter now in detecting and using indexes and views
   - New glyphs in diagram and explorer to show transient and view entities
   - Fix bad constructor generation when multiple associations exist between the same classes (see https://github.com/msawczyn/EFDesigner2022/issues/50)
   - Removed modeling restriction on unidirectional many-to-many properties in EFCore7+ projects (see https://github.com/msawczyn/EFDesigner2022/issues/54)
   - Updated file sync logic for generated files. Thanks to Sancho-Lee for the pull request. (see https://github.com/msawczyn/EFDesigner2022/issues/57)
   - Fix bad code re: key fields in derived types. (see https://github.com/msawczyn/EFDesigner2022/issues/55)

4.2.1
   - Added support for EFCore7
   - Added ability to import EFCore7 assemblies
   - Added ability to use property types not available in the select list, along with a global option enabling this feature in Tools/Options/Entity Framework Visual Editor (see https://github.com/msawczyn/EFDesigner2022/issues/28)
   - Added support for DateOnly and TimeOnly types in EFCore 6+
   - Added ability to specify decimal precision in EFCore5+ projects