@@ -1,3 +1,3 @@
 version https://git-lfs.github.com/spec/v1
-oid sha256:5e4cdaa8465a8d8310a0adef2ee3ee9f3885237b689cd15b1428be15e194eb94
-size 332942595
+oid sha256:290a77107ab5a7eb793c0d777f46865ec12c075ce8e6958e64fb6c24103674f3
+size 332942787
