@@ -162,6 +162,15 @@
             </Strings>
          </Button>
 
+         <Button guid="guidEFDiagramMenuCmdSet" id="cmdidCollapseSelected" priority="0x0109" type="Button">
+            <Parent guid="guidEFDiagramMenuCmdSet" id="grpidEFDiagram"/>
+            <CommandFlag>DynamicVisibility</CommandFlag>
+            <Strings>
+               <ButtonText>Collapse Selected Elements</ButtonText>
+               <CommandName>CollapseSelected</CommandName>
+            </Strings>
+         </Button>
+
          <Button guid="guidEFDiagramMenuCmdSet" id="cmdidMergeAssociations" priority="0x010A" type="Button">
             <Parent guid="guidEFDiagramMenuCmdSet" id="grpidEFDiagram"/>
             <CommandFlag>DynamicVisibility</CommandFlag>
