@@ -23,7 +23,7 @@ namespace <#= CodeGenerationUtilities.GetPackageNamespace(this.Dsl) #>
 	/// <summary>
 	/// Double-derived class to allow easier code customization.
 	/// </summary>
-   [VSShell::ProvideMenuResource("1000.ctmenu", version: 45)]
+   [VSShell::ProvideMenuResource("1000.ctmenu", version: 46)]
 	[VSShell::ProvideToolboxItems(1)]
 	[global::Microsoft.VisualStudio.TextTemplating.VSHost.ProvideDirectiveProcessor(typeof(global::<#= this.Dsl.Namespace #>.<#= directiveName #>DirectiveProcessor), global::<#= this.Dsl.Namespace #>.<#= directiveName #>DirectiveProcessor.<#= directiveName #>DirectiveProcessorName, "A directive processor that provides access to <#= directiveName #> files")]
 	[global::System.Runtime.InteropServices.Guid(Constants.<#= dslName #>PackageId)]
